--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-spring.rabbitmq.addresses=amqps://fdbfecqc:7u2dNjckHunJDvDYTajyzuCW5HM974UM@bonobo-01.rmq.cloudamqp.com/fdbfecqc
+spring.rabbitmq.addresses=amqps://qlaczvbi:57UWEGtaVc4iWep3VyP3k65bQxvXk2fF@jackal.rmq.cloudamqp.com/qlaczvbi
 
 queue.name=fiap.scj.mensagens
 
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
-#
-#queue.name=teste
+server.port=8090
